# rocketmq-proxy

./: .gitignore  CMakeLists.txt  CallData.h  Const.hpp  ConsumeAckCallData.cpp  ConsumeAckCallData.h  ConsumeCallData.cpp  ConsumeCallData.h  ConsumeClient.cpp  ConsumeClientSleep.cpp  ConsumerClient.cpp  ConsumerMsgListener.hpp  Dockerfile  EsLog.hpp  GNUmakefile  Ip.hpp  MapTS.hpp  MsgWorker.cpp  MsgWorker.h  ProduceCallData.cpp  ProduceCallData.h  ProduceClient.cpp  ProducerCallback.h  ProducerClient.cpp  Proxy.grpc.pb.cc  Proxy.grpc.pb.h  Proxy.pb.cc  Proxy.pb.h  ProxyClient.cpp  ProxyConsumerClient.cpp  ProxyLogger.cpp  ProxyLogger.h  ProxyLogger.hpp  ProxyProducerClient.cpp  ProxyPushConsumer.hpp  ProxyServer.cpp  QueueTS.hpp  README.md  Server.cpp  Server2.cpp  (+21 more)
config/: broker.conf  plain_acl.yml  rocketmq.pc  serverLocal.json
docker/: Dockerfile  build.sh
example/: CMakeLists.txt  PullConsumer.cpp  PushConsumer.cpp
include/: common.h
php/: Common.php  Consumer.php  Producer.php  composer.json
php/GPBMetadata/: Proxy.php
php/Proxy/: ConsumeAckReply.php  ConsumeAckRequest.php  ConsumeReply.php  ConsumeRequest.php  ProduceReply.php  ProduceRequest.php  RMQProxyClient.php
protos/: Proxy.proto  proxy.proto
scripts/: checkLeak.sh
tests/: io_test.cpp  parse_test.cpp
